--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="com.heroku.bft"
       android:versionCode="1"
       android:versionName="1.0">
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Homescreen"
                   android:label="@string/app_name">
