--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.heroku.bft"
       android:versionCode="1"
@@ -13,7 +14,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".GoogleMaps"
+        		  android:label="@string/app_name"
+        </activity>
+        
+	 <uses-library android:name="com.google.android.maps" />
     </application>
 
 
