--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,9 @@
       android:versionName="1.0">
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+    
         <activity android:name=".Homescreen"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,9 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity android:name=".GoogleMaps"
-        		  android:label="@string/app_name"
-        </activity>
+        		  android:label="@string/app_name">
+        		  </activity>
+
+         <activity android:name=".Directions"
+                   android:label="@string/app_name">
+         </activity>
+
         
 	 <uses-library android:name="com.google.android.maps" />
     </application>
