--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,14 +9,21 @@
 	
     <application android:icon="@drawable/icon" android:label="@string/app_name">
     
-        <activity android:name=".GoogleMaps"
+        <activity android:name=".frontscreen"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        
+         <activity android:name=".GoogleMaps"
+                   android:label="@string/app_name">
+         </activity>
+                  <activity android:name=".trucklist"
+                   android:label="@string/app_name">
+         </activity>
+         
          <activity android:name=".Directions"
                    android:label="@string/app_name">
          </activity>
